--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Tareas App</h1>
-    <input type="text" name="task" id="new-task" placeholder="tarea..." />
-    <button id="button-add">Agregar Tarea</button>
-    <button id="button-delete">Borrar tareas</button>
-    <ul id="tasks-list"></ul>
-    <div id="content"></div>
-
-    <script type="module" src="./tasks-app/tasks.js"></script>
+    <h1>Tasks app</h1>
+    <input type="text" id="new-task" />
+    <button id="delete-tasks">Borrar tareas</button>
+    <button id="add-task">Agregar Tarea</button>
+    <ul id="tasks"></ul>
+    <script type="module" src="tasks-app/tasks.js"></script>
   </body>
 </html>
