add: final version

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <button id="delete-tasks">Borrar tareas</button>
     <button id="add-task">Agregar Tarea</button>
     <ul id="tasks"></ul>
-    <script type="module" src="tasks-app/tasks.js"></script>
+    <script type="module" src="tasks-app/dom.js"></script>
   </body>
 </html>
