manejo de formularios

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Tasks app</h1>
+    <!-- <h1>Tasks app</h1>
     <input type="text" id="new-task" />
     <button id="delete-tasks">Borrar tareas</button>
     <button id="add-task">Agregar Tarea</button>
     <ul id="tasks"></ul>
-    <script type="module" src="tasks-app/dom.js"></script>
+    <script type="module" src="tasks-app/dom.js"></script> -->
+    <h1>Manejo de formularios</h1>
+    <form id="form-newUser">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" />
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" />
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" />
+      <button type="submit">Crear cuenta</button>
+    </form>
+    <input type="text" id="nuevo" />
+    <script src="form/form.js"></script>
   </body>
 </html>
