--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- <h1>Tasks app</h1>
-    <input type="text" id="new-task" />
-    <button id="delete-tasks">Borrar tareas</button>
-    <button id="add-task">Agregar Tarea</button>
-    <ul id="tasks"></ul>
-    <script type="module" src="tasks-app/dom.js"></script> -->
-    <h1>Manejo de formularios</h1>
-    <form id="form-newUser">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" />
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" />
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" />
-      <button type="submit">Crear cuenta</button>
+    <h1>Validador de tarjeta</h1>
+    <form id="form-creditCard">
+      <input type="text" name="creditCard" />
+      <button type="submit">Validar</button>
     </form>
-    <input type="text" id="nuevo" />
-    <script src="form/form.js"></script>
+    <p id="message-valid"></p>
+    <script src="validCard/validCreditCard.js"></script>
   </body>
 </html>
