proyecto de ejemplo

--- a/encryptacionApp/index.html
+++ b/encryptacionApp/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
-    <link rel="stylesheet" href="encryptacionApp/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- <h1>Validador de tarjeta</h1>
-    <form id="form-creditCard">
-      <input type="text" name="creditCard" />
-      <button type="submit">Validar</button>
-    </form>
-    <p id="message-valid"></p>
-    <script src="validCard/validCreditCard.js"></script> -->
     <div class="container">
       <h1>Encriptador de mensajes</h1>
       <label>
@@ -31,6 +23,6 @@
       </div>
       <input type="text" id="result-message" />
     </div>
-    <script src="encryptacionApp/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
